[tool.poetry]
name = "turu-core"
version = "0.1.0"
description = ""
authors = ["yassun7010 <yassun7010@outlook.com>"]
readme = "README.md"
packages = [{ include = "turu", from = "src" }]
repository = "https://github.com/yassun7010/turu-py"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.taskipy.tasks]
format = "ruff format ."
lint = "ruff check ."
typecheck = "pyright src/** tests/**"
test = "pytest --cov=src --cov-report=term --cov-report=xml"
ci = "task format && task lint && task typecheck && task test"

[tool.poetry.extras]
pydantic = ["pydantic"]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.8.0"
pydantic = { version = "^2", optional = true }

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
pyright = "^1.1.339"
ruff = "^0.3.5"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.3"
pydantic = "^2.8.2"

[tool.poetry-dynamic-versioning]
enable = false

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
