[tool.poetry]
name = "turu-mysql"
version = "0.1.0"
description = "MySQL adapter for turu"
authors = ["yassun7010 <yassun7010@outlook.com>"]
readme = "README.md"
packages = [{ include = "turu", from = "src" }]
repository = "https://github.com/yassun7010/turu-py"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
pyright = "^1.1.339"
ruff = "^0.1.7"
pytest = "^7.4.3"
pydantic = "^2.5.2"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.2"

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.8.0"
aiomysql = "^0.2.0"
cryptography = "^41.0.7"

[tool.poetry.dependencies.turu-core]
# INFO: poetry-dynamic-versioning to replace this.
path = "../turu-core"
develop = true
# version = "0.0.0"

[tool.poetry-dynamic-versioning]
enable = false

[[tool.poetry-dynamic-versioning.substitution.folders]]
path = "."
files = ["pyproject.toml"]
patterns = [
    "path = \"\\.\\./turu-[\\w-]+\"\ndevelop = true\n# (version = \"())0\\.0\\.0",
]

[tool.taskipy.tasks]
format = "ruff format ."
lint = "ruff check ."
typecheck = "pyright src/** tests/**"
test = "pytest --cov=src --cov-report=term --cov-report=xml"
ci = "task format && task lint && task typecheck && task test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
