[tool.poetry]
name = "turu-snowflake"
version = "0.1.0"
description = "snowflake adapter for turu"
authors = ["yassun7010 <yassun7010@outlook.com>"]
readme = "README.md"
packages = [{ include = "turu", from = "src" }]
repository = "https://github.com/yassun7010/turu-py"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: SQL",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.extras]
pandas = ["pandas", "pyarrow", "pandas-stubs"]
pandera = ["pandera"]

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.9.0"
snowflake-connector-python = "^3.6.0"
pandas = { version = "*", optional = true }
pyarrow = { version = "*", optional = true }
pandera = { version = "^0.18.0", optional = true }

[tool.poetry.dependencies.turu-core]
# INFO: poetry-dynamic-versioning to replace this.
path = "../turu-core"
develop = true
# version = "0.0.0"

[tool.poetry-dynamic-versioning]
enable = false

[[tool.poetry-dynamic-versioning.substitution.folders]]
path = "."
files = ["pyproject.toml"]
patterns = [
    "path = \"\\.\\./turu-[\\w-]+\"\ndevelop = true\n# (version = \"())0\\.0\\.0",
]

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
pyright = "^1.1.339"
ruff = "^0.1.7"
pytest = "^7.4.3"
pydantic = "^2.5.2"
pytest-xdist = "^3.5.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.2"

pyarrow-stubs = { version = "^10.0.1.7", optional = true }
numpy = "^1.26.3"

[tool.taskipy.tasks]
format = "ruff format ."
lint = "ruff check ."
typecheck = "pyright src/** tests/**"
test = "pytest -n auto --cov=src --cov-report=term --cov-report=xml tests"
ci = "task format && task lint && task typecheck && task test"

[tool.pyright]
reportOverlappingOverload = "none" # for --no-extras mode.

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
