[tool.poetry]
name = "turu-sqlite3"
version = "0.1.0"
description = ""
authors = ["yassun7010 <yassun7010@outlook.com>"]
readme = "README.md"
packages = [{ include = "turu", from = "src" }]

[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"
pyright = "^1.1.339"
ruff = "^0.1.7"
pytest = "^7.4.3"
pydantic = "^2.5.2"

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "^4.8.0"

[tool.poetry.dependencies.turu-core]
# INFO: poetry-dynamic-versioning to replace this.
path = "../turu-core"
develop = true
# version = "0.0.0"

[tool.poetry-dynamic-versioning]
enable = false

[[tool.poetry-dynamic-versioning.substitution.folders]]
path = "."
files = ["pyproject.toml"]
patterns = [
    "path = \"\\.\\./turu-[\\w-]+\"\ndevelop = true\n# (version = \"())0\\.0\\.0",
]

[tool.taskipy.tasks]
format = "ruff format ."
lint = "ruff check ."
typecheck = "pyright src/** tests/**"
test = "pytest"
ci = "task format && task lint && task typecheck && task test"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
